--- a/sass/_single.scss
+++ b/sass/_single.scss
@@ -614,7 +614,7 @@
 			position: absolute;
 			left: 0;
 			right: 2px;
-			overflow-y: scroll;
+			overflow-y: auto;
 			.card-inner {
 				padding: 12px 15px;
 			}
