tweak timetable layout

--- a/sass/_single.scss
+++ b/sass/_single.scss
@@ -343,7 +343,7 @@
 	padding-left: 76px;
 	@media screen and ( max-width: 782px ) {
 		margin-top: 12px;
-		padding-left: 36px;
+		padding-left: 50px;
 	}
 	& + .session-table {
 		@media screen and ( max-width: 782px ) {
@@ -364,11 +364,14 @@
 		@media screen and ( max-width: 782px ) {
 			margin-top: 20px;
 			padding-bottom: 12px;
-			width: 200vw;
+			width: 170vw;
 		}
 		.room {
 			width: 418px;
 			text-align: center;
+			@media screen and ( max-width: 782px ) {
+				width: 50%;
+			}
 			&:last-child {
 				.room-inner {
 					margin-right: 0;
@@ -435,6 +438,9 @@
 				left: 416px;
 				width: 2px;
 				background-color: #f2ad5c;
+				@media screen and ( max-width: 782px ) {
+					left: calc(85vw - 2px);
+				}
 			}
 		}
 
@@ -445,7 +451,7 @@
 			top: -121px;
 			@media screen and ( max-width: 782px ) {
 				padding-right: 15px;
-				width: 200vw;
+				width: 170vw;
 				top: -77px;
 			}
 		}
@@ -471,8 +477,8 @@
 				font-weight: 600;
 				font-size: 18px;
 				@media screen and ( max-width: 782px ) {
-					left: -36px;
-					font-size: 10px;
+					left: -40px;
+					font-size: 12px;
 				}
 			}
 			&.timeline-hide {
@@ -489,7 +495,7 @@
 		position: relative;
 		z-index: 1;
 		@media screen and ( max-width: 782px ) {
-			width: 50vw;
+			width: 100%;
 		}
 		&:last-child {
 		}
@@ -499,8 +505,15 @@
 			right: 20px;
 			background-color: #f2ad5c;
 			overflow-y: auto;
+			@media screen and ( max-width: 782px ) {
+				right: 25px;
+				left: 25px;
+			}
 			.card-inner {
 				padding: 76px 56px 89px;
+				@media screen and ( max-width: 782px ) {
+					padding: 22px 25px 48px;
+				}
 			}
 			.time {
 				margin-bottom: 3px;
@@ -522,7 +535,7 @@
 						font-size: 18px;
 						@media screen and ( max-width: 782px ) {
 							line-height: 1.6;
-							font-size: 10px;
+							font-size: 16px;
 						}
 						&[lang="en"] {
 							margin-top: 5px;
@@ -568,11 +581,24 @@
 				padding-top: 16px;
 				border-top: 1px solid #000;
 				.sponsors {
-					a, img {
-						display: block;
-					}
 					a {
 						margin-top: 20px;
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						width: 100%;
+						min-height: 76px;
+						background-color: #fff;
+						@media screen and ( max-width: 782px ) {
+							min-height: 50px;
+						}
+					}
+					img {
+						display: block;
+						max-width: 130px;
+						@media screen and ( max-width: 782px ) {
+							max-width: 80px;
+						}
 					}
 				}
 				.sponsor-prefix {
