add award logo link style

--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -1616,7 +1616,7 @@
 					text-align: center;
 				}
 			}
-			img {
+			a, img {
 				display: block;
 				@media screen and ( max-width: 782px ) {
 					max-width: 175px;
