--- a/sass/_frame.scss
+++ b/sass/_frame.scss
@@ -42,7 +42,7 @@ iframe, video, object{
 	top: 0;
 	right: 0;
 	left: 0;
-	z-index: 3;
+	z-index: 20;
 	background-color: #fff;
 	transition: all 400ms cubic-bezier(0.42, 0, 0.58, 1);
 	@media screen and ( min-width: 783px ) {
@@ -144,6 +144,18 @@ iframe, video, object{
 			width: 215px;
 			@media screen and ( max-width: 782px ) {
 				width: 59px;
+			}
+		}
+		svg {
+			display: block;
+			@media screen and ( max-width: 782px ) {
+				display: none;
+			}
+			& + svg {
+				display: none;
+				@media screen and ( max-width: 782px ) {
+					display: block;
+				}
 			}
 		}
 	}
